Refactor: separar sonido a otra clase

--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(taller_client
         assets.cpp
         car.cpp
         screen.cpp
+        sound.cpp
         PUBLIC
         # .h files
         sdl_app.h
