--- a/assets/liberty_city_circuito1.yaml
+++ b/assets/liberty_city_circuito1.yaml
@@ -112,26 +112,6 @@ map:
           y: 697.674
     - type: residential
       height: 10
-      vertices:
-        - x: 249.501
-          y: 791.013
-        - x: 249.191
-          y: 784.829
-        - x: 510.75
-          y: 784.675
-        - x: 510.286
-          y: 790.085
-    - type: residential
-      height: 10
-      vertices:
-        - x: 247.596
-          y: 878.496
-        - x: 248.15
-          y: 873.511
-        - x: 509.04
-          y: 872.957
-        - x: 509.04
-          y: 877.388
     - type: residential
       height: 10
       vertices:
@@ -8975,10 +8955,112 @@ map:
         - { x: 230.461, y: 2468.68 }
     - type: bridge
       vertices:
-        - { x: 231.738, y: 2470.59 }
-        - { x: 233.015, y: 2374.84 }
-        - { x: 533.061, y: 2378.03 }
-        - { x: 534.338, y: 2471.23 }
+        - { x: 233.015, y: 2466.34 }
+        - { x: 233.547, y: 2376.43 }
+        - { x: 534.657, y: 2378.56 }
+        - { x: 532.529, y: 2466.87 }
+    - type: railing
+      vertices:
+        - { x: 215.765, y: 1544.73 }
+        - { x: 511.575, y: 1544.47 }
+        - { x: 511.319, y: 1550.89 }
+        - { x: 216.278, y: 1551.15 }
+    - type: railing
+      vertices:
+        - { x: 217.304, y: 1455.19 }
+        - { x: 510.549, y: 1455.19 }
+        - { x: 511.062, y: 1463.92 }
+        - { x: 217.561, y: 1461.61 }
+    - type: bridge
+      vertices:
+        - { x: 214.927, y: 1451.82 }
+        - { x: 506.993, y: 1450.76 }
+        - { x: 510.185, y: 1550.77 }
+        - { x: 215.991, y: 1549.71 }
+    - type: bridge
+      vertices:
+        - { x: 216.124, y: 1319.22 }
+        - { x: 217.355, y: 1256.72 }
+        - { x: 510.754, y: 1256.72 }
+        - { x: 510.754, y: 1318.91 }
+    - type: railing
+      vertices:
+        - { x: 216.432, y: 1311.52 }
+        - { x: 509.215, y: 1311.52 }
+        - { x: 508.599, y: 1319.22 }
+        - { x: 216.432, y: 1318.91 }
+    - type: bridge
+      vertices:
+        - { x: 248.632, y: 1102.71 }
+        - { x: 248.903, y: 1040.62 }
+        - { x: 512.176, y: 1037.91 }
+        - { x: 511.905, y: 1102.98 }
+    - type: railing
+      vertices:
+        - { x: 249.445, y: 1047.94 }
+        - { x: 249.716, y: 1038.72 }
+        - { x: 510.82, y: 1038.45 }
+        - { x: 511.633, y: 1046.86 }
+    - type: railing
+      vertices:
+        - { x: 248.36, y: 1103.25 }
+        - { x: 248.903, y: 1095.39 }
+        - { x: 510.549, y: 1096.2 }
+        - { x: 511.091, y: 1103.52 }
+    - type: bridge
+      vertices:
+        - { x: 248.36, y: 879.023 }
+        - { x: 248.903, y: 783.583 }
+        - { x: 510.82, y: 784.396 }
+        - { x: 512.176, y: 878.48 }
+    - type: railing
+      vertices:
+        - { x: 249.445, y: 784.125 }
+        - { x: 509.193, y: 783.04 }
+        - { x: 510.549, y: 791.717 }
+        - { x: 249.445, y: 791.988 }
+    - type: railing
+      vertices:
+        - { x: 248.089, y: 873.329 }
+        - { x: 512.176, y: 872.515 }
+        - { x: 511.633, y: 883.361 }
+        - { x: 248.36, y: 880.92 }
+    - type: bridge
+      vertices:
+        - { x: 1585.17, y: 2839.12 }
+        - { x: 1585.82, y: 2601.6 }
+        - { x: 1680.5, y: 2599.65 }
+        - { x: 1678.55, y: 2838.79 }
+    - type: railing
+      vertices:
+        - { x: 1671.06, y: 2599.33 }
+        - { x: 1678.87, y: 2600.95 }
+        - { x: 1679.52, y: 2839.44 }
+        - { x: 1672.37, y: 2838.14 }
+    - type: railing
+      vertices:
+        - { x: 1583.87, y: 2839.12 }
+        - { x: 1584.19, y: 2599.98 }
+        - { x: 1592, y: 2601.6 }
+        - { x: 1590.7, y: 2838.47 }
+    - type: bridge
+      vertices:
+        - { x: 3831.11, y: 2901.09 }
+        - { x: 3832.52, y: 2535.65 }
+        - { x: 3928.1, y: 2535.65 }
+        - { x: 3927.16, y: 2901.56 }
+    - type: railing
+      vertices:
+        - { x: 3831.11, y: 2536.58 }
+        - { x: 3839.54, y: 2537.52 }
+        - { x: 3840.95, y: 2900.62 }
+        - { x: 3832.52, y: 2902.97 }
+    - type: railing
+      vertices:
+        - { x: 3919.66, y: 2902.97 }
+        - { x: 3920.13, y: 2536.11 }
+        - { x: 3926.22, y: 2537.05 }
+        - { x: 3927.63, y: 2903.44 }
 
   checkpoints:
     - type: start
@@ -9072,26 +9154,146 @@ map:
   sensors:
     upper:
       - vertices:
-          - { x: 206.84, y: 2377.39 }
-          - { x: 230.461, y: 2376.75 }
-          - { x: 229.184, y: 2466.76 }
-          - { x: 209.394, y: 2465.49 }
+          - { x: 534.125, y: 2377.5 }
+          - { x: 531.465, y: 2467.4 }
+          - { x: 553.277, y: 2467.4 }
+          - { x: 554.341, y: 2379.62 }
       - vertices:
-          - { x: 538.807, y: 2376.75 }
-          - { x: 563.704, y: 2378.67 }
-          - { x: 565.619, y: 2469.32 }
-          - { x: 535.615, y: 2469.96 }
+          - { x: 209.607, y: 2375.9 }
+          - { x: 231.951, y: 2375.37 }
+          - { x: 230.355, y: 2466.34 }
+          - { x: 211.735, y: 2464.74 }
+      - vertices:
+          - { x: 508.753, y: 1454.68 }
+          - { x: 509.779, y: 1550.38 }
+          - { x: 533.896, y: 1551.15 }
+          - { x: 532.869, y: 1455.96 }
+      - vertices:
+          - { x: 191.648, y: 1455.19 }
+          - { x: 216.534, y: 1455.71 }
+          - { x: 216.278, y: 1550.89 }
+          - { x: 189.596, y: 1549.61 }
+      - vertices:
+          - { x: 509.523, y: 1253.64 }
+          - { x: 509.215, y: 1317.68 }
+          - { x: 524.916, y: 1317.37 }
+          - { x: 526.763, y: 1256.1 }
+      - vertices:
+          - { x: 217.047, y: 1257.34 }
+          - { x: 217.047, y: 1318.6 }
+          - { x: 199.499, y: 1317.37 }
+          - { x: 198.883, y: 1258.26 }
+      - vertices:
+          - { x: 510.82, y: 1036.28 }
+          - { x: 511.633, y: 1102.98 }
+          - { x: 529.528, y: 1102.71 }
+          - { x: 527.63, y: 1039.26 }
+      - vertices:
+          - { x: 247.005, y: 1037.64 }
+          - { x: 247.276, y: 1102.44 }
+          - { x: 228.296, y: 1102.71 }
+          - { x: 229.381, y: 1040.35 }
+      - vertices:
+          - { x: 511.362, y: 783.04 }
+          - { x: 511.362, y: 878.751 }
+          - { x: 526.817, y: 878.48 }
+          - { x: 527.63, y: 784.396 }
+      - vertices:
+          - { x: 248.632, y: 783.312 }
+          - { x: 247.547, y: 880.107 }
+          - { x: 232.363, y: 879.294 }
+          - { x: 231.55, y: 784.396 }
+      - vertices:
+          - { x: 1585.17, y: 2838.79 }
+          - { x: 1678.87, y: 2839.12 }
+          - { x: 1676.92, y: 2856.36 }
+          - { x: 1584.84, y: 2851.48 }
+      - vertices:
+          - { x: 1582.89, y: 2599.98 }
+          - { x: 1679.2, y: 2600.95 }
+          - { x: 1678.55, y: 2585.66 }
+          - { x: 1582.89, y: 2585.66 }
+      - vertices:
+          - { x: 3830.17, y: 2900.62 }
+          - { x: 3925.28, y: 2902.97 }
+          - { x: 3921.54, y: 2920.3 }
+          - { x: 3832.05, y: 2913.27 }
+      - vertices:
+          - { x: 3831.58, y: 2535.65 }
+          - { x: 3832.05, y: 2515.5 }
+          - { x: 3930.44, y: 2514.09 }
+          - { x: 3926.69, y: 2536.58 }
     lower:
       - vertices:
-          - { x: 328.774, y: 2473.79 }
-          - { x: 436.025, y: 2472.51 }
-          - { x: 432.194, y: 2495.49 }
-          - { x: 329.413, y: 2494.22 }
+          - { x: 331.434, y: 2373.77 }
+          - { x: 331.434, y: 2351.96 }
+          - { x: 433.578, y: 2352.49 }
+          - { x: 434.11, y: 2375.37 }
       - vertices:
-          - { x: 328.774, y: 2374.2 }
-          - { x: 439.217, y: 2375.47 }
-          - { x: 439.855, y: 2349.3 }
-          - { x: 328.136, y: 2348.66 }
+          - { x: 330.37, y: 2470.06 }
+          - { x: 438.898, y: 2471.13 }
+          - { x: 439.43, y: 2489.75 }
+          - { x: 332.498, y: 2485.49 }
+      - vertices:
+          - { x: 328.65, y: 1455.19 }
+          - { x: 328.393, y: 1429.79 }
+          - { x: 436.147, y: 1432.1 }
+          - { x: 438.713, y: 1454.68 }
+      - vertices:
+          - { x: 328.434, y: 1552.77 }
+          - { x: 328.065, y: 1571.61 }
+          - { x: 437.789, y: 1570.13 }
+          - { x: 437.789, y: 1550.55 }
+      - vertices:
+          - { x: 330.651, y: 1255.49 }
+          - { x: 330.651, y: 1237.63 }
+          - { x: 439.329, y: 1238.25 }
+          - { x: 438.097, y: 1255.49 }
+      - vertices:
+          - { x: 327.264, y: 1319.83 }
+          - { x: 326.649, y: 1334 }
+          - { x: 438.097, y: 1336.46 }
+          - { x: 438.097, y: 1318.91 }
+      - vertices:
+          - { x: 328.888, y: 1038.18 }
+          - { x: 327.803, y: 1020.56 }
+          - { x: 438.698, y: 1019.74 }
+          - { x: 437.884, y: 1037.91 }
+      - vertices:
+          - { x: 327.261, y: 1102.71 }
+          - { x: 327.261, y: 1119.25 }
+          - { x: 439.24, y: 1120.06 }
+          - { x: 438.969, y: 1103.79 }
+      - vertices:
+          - { x: 332.141, y: 782.227 }
+          - { x: 437.613, y: 782.498 }
+          - { x: 439.24, y: 768.67 }
+          - { x: 331.87, y: 769.755 }
+      - vertices:
+          - { x: 329.701, y: 880.378 }
+          - { x: 328.074, y: 894.477 }
+          - { x: 438.698, y: 897.189 }
+          - { x: 438.969, y: 883.361 }
+      - vertices:
+          - { x: 1583.22, y: 2666.35 }
+          - { x: 1560.77, y: 2666.35 }
+          - { x: 1555.56, y: 2768.84 }
+          - { x: 1584.52, y: 2770.47 }
+      - vertices:
+          - { x: 1678.55, y: 2663.42 }
+          - { x: 1699.37, y: 2663.75 }
+          - { x: 1698.72, y: 2768.51 }
+          - { x: 1680.83, y: 2769.16 }
+      - vertices:
+          - { x: 3925.75, y: 2662.62 }
+          - { x: 3945.9, y: 2661.68 }
+          - { x: 3945.9, y: 2774.59 }
+          - { x: 3926.22, y: 2775.06 }
+      - vertices:
+          - { x: 3829.24, y: 2771.78 }
+          - { x: 3830.17, y: 2666.36 }
+          - { x: 3809.56, y: 2666.36 }
+          - { x: 3804.87, y: 2772.72 }
 
   roads:
     - vertices:
