--- a/assets/liberty_city_circuito2.yaml
+++ b/assets/liberty_city_circuito2.yaml
@@ -1,26 +1,12 @@
+include: "liberty_city_map.yaml"
+
 map:
   name: "Liberty City - Circuito 2"
-  gravity: [0.0, 0.0]
-  city: "LibertyCity"
-
-  # --- Muro rectangular (120x60 metros) ---
-  walls:
-    - { id: 4, x: 80, y: 20, w: 2, h: 40 }
 
   # --- Checkpoints dentro ---
   checkpoints:
     - { id: 110, x: 10, y: 10, w: 12, h: 2, angle: 0.0, order: 0}
     - { id: 111, x: 40, y: 10, w: 12, h: 2, angle: 0.0, order: 1}
-
-  # --- Puentes afuera (solo render) ---
-  bridges:
-    - { id: 310, x: -15, y: 30, w: 10, h: 3, angle: 0.0, driveable: false }
-    - { id: 311, x: 135, y: 30, w: 10, h: 3, angle: 0.0, driveable: true }
-
-  # --- Hints de decoración fuera del cuadrilátero ---
-  hints:
-    - { id: 210, x: -10, y: 15, angle: 0.0 }
-    - { id: 211, x: 130, y: 15, angle: 0.0 }
 
   # --- Dos spawn points dentro del cuadrilátero ---
   spawn_points:
