--- a/assets/liberty_city_circuito3.yaml
+++ b/assets/liberty_city_circuito3.yaml
@@ -1,87 +1,7 @@
+include: "liberty_city_map.yaml"
+
 map:
   name: "Liberty City - Circuito 3"
-  city: "LibertyCity"
-  gravity: [0, 0]
-
-  # ============================
-  # BUILDINGS (residential / rails / bridges / overpasses)
-  # ============================
-  buildings:
-
-    # --- Residential (bloque normal) ---
-    - type: residential
-      vertices:
-        - { x: 20, y: 20 }
-        - { x: 40, y: 20 }
-        - { x: 40, y: 40 }
-        - { x: 20, y: 40 }
-
-    - type: residential
-      vertices:
-        - { x: 100, y: 150 }
-        - { x: 130, y: 150 }
-        - { x: 130, y: 180 }
-        - { x: 100, y: 180 }
-
-    # --- Overpass (violeta – siempre arriba de autos) ---
-    - type: overpass
-      vertices:
-        - { x: 180, y: 60 }
-        - { x: 240, y: 60 }
-        - { x: 240, y: 80 }
-        - { x: 180, y: 80 }
-
-    # --- Overpass 2 (más grande) ---
-    - type: overpass
-      vertices:
-        - { x: 260, y: 140 }
-        - { x: 320, y: 140 }
-        - { x: 320, y: 170 }
-        - { x: 260, y: 170 }
-
-    # ============================
-    # BRIDGE TRANSITABLE (puente con barandas)
-    # ============================
-
-    - type: bridge
-      vertices:
-        - { x: 50, y: 50 }
-        - { x: 150, y: 50 }
-        - { x: 150, y: 65 }
-        - { x: 50, y: 65 }
-
-    # --- Rails izquierda ---
-    - type: railing
-      vertices:
-        - { x: 50, y: 50 }
-        - { x: 150, y: 50 }
-        - { x: 50, y: 52 }
-        - { x: 150, y: 52 }
-
-    # --- Rails derecha ---
-    - type: railing
-      vertices:
-        - { x: 50, y: 67 }
-        - { x: 50, y: 65 }
-        - { x: 150, y: 65 }
-        - { x: 150, y: 67 }
-
-
-  # ============================
-  # SENSORS (upper: pasa arriba – lower: pasa abajo)
-  # ============================
-  sensors:
-
-    # --- Puente principal (50..150, 50..65) ---
-
-    upper:
-      - { x: 50, y: 57, w: 6, h: 12 }     # izquierda lateral
-      - { x: 150, y: 57, w: 6, h: 12 }    # derecha lateral
-
-    lower:
-      - { x: 100, y: 50,  w: 40, h: 4 }   # arriba del puente
-      - { x: 100, y: 65,  w: 40, h: 4 }   # abajo del puente
-
 
   # ============================
   # CHECKPOINTS
