Puentes + checkpoints bien orientados

--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -4,11 +4,14 @@ target_sources(taller_client
         game.cpp
         sdl_app.cpp
         assets.cpp
+        map.cpp
         car.cpp
         screen.cpp
         sound.cpp
         PUBLIC
         # .h files
         sdl_app.h
-        classes.h
+        classes.h    # TODO(franco): TEMPORAL, SEPARAR.
+        assets.h
+        map.h
 )
