--- a/assets/liberty_city_circuito2.yaml
+++ b/assets/liberty_city_circuito2.yaml
@@ -5,10 +5,109 @@ map:
 
   # --- Checkpoints dentro ---
   checkpoints:
-    - { id: 110, x: 10, y: 10, w: 12, h: 2, angle: 0.0, order: 0}
-    - { id: 111, x: 40, y: 10, w: 12, h: 2, angle: 0.0, order: 1}
+    - type: start
+      x: 1806.79
+      y: 4548.64
+      rotation: 90
+      width: 100
+      order: 0
+    - type: intermediate
+      x: 3533.49
+      y: 4552.37
+      rotation: 90
+      width: 100
+      order: 1
+    - type: intermediate
+      x: 4520.7
+      y: 4077.39
+      rotation: 0
+      width: 100
+      order: 2
+    - type: intermediate
+      x: 4088.56
+      y: 3144.19
+      rotation: 270
+      width: 100
+      order: 3
+    - type: intermediate
+      x: 3881.81
+      y: 2790.28
+      rotation: 0
+      width: 100
+      order: 4
+    - type: intermediate
+      x: 3883.67
+      y: 1816.1
+      rotation: 0
+      width: 100
+      order: 5
+    - type: intermediate
+      x: 4086.7
+      y: 1022.61
+      rotation: 0
+      width: 100
+      order: 6
+    - type: intermediate
+      x: 4520.7
+      y: 199.306
+      rotation: 0
+      width: 100
+      order: 7
+    - type: intermediate
+      x: 3956.31
+      y: 275.675
+      rotation: 180
+      width: 100
+      order: 8
+    - type: intermediate
+      x: 3669.46
+      y: 834.476
+      rotation: 270
+      width: 100
+      order: 9
+    - type: intermediate
+      x: 1227.5
+      y: 836.339
+      rotation: 270
+      width: 100
+      order: 10
+    - type: intermediate
+      x: 171.366
+      y: 834.476
+      rotation: 270
+      width: 100
+      order: 11
+    - type: intermediate
+      x: 381.847
+      y: 566.252
+      rotation: 180
+      width: 100
+      order: 12
+    - type: intermediate
+      x: 379.985
+      y: 1812.38
+      rotation: 180
+      width: 100
+      order: 13
+    - type: intermediate
+      x: 381.847
+      y: 2583.52
+      rotation: 180
+      width: 100
+      order: 14
+    - type: finish
+      x: 722.716
+      y: 2717.64
+      rotation: 90
+      width: 100
+      order: 15
 
-  # --- Dos spawn points dentro del cuadrilátero ---
   spawn_points:
-    - { x: 5, y: 15, angle: 0.0 }   # Player 1
-    - { x: 10, y: 10, angle: 0.0 }   # Player 2
+      - { x: 1757, y: 4528, angle: 0.0 }   # Player 1
+      - { x: 1757, y: 4544, angle: 0.0 }   # Player 2
+      - {x: 1757, y: 4567, angle: 0.0}     # Player 3
+      - {x: 1735, y: 4528, angle: 0.0}     # Player 4
+      - {x: 1735, y: 4544, angle: 0.0}     # Player 5
+      - {x: 1735, y: 4567, angle: 0.0}     # Player 6
+      - {x: 1680, y: 4528, angle: 0.0}     # Player 7
+      - {x: 1680, y: 4544,angle: 0.0}      # Player 8
