NPCs + Refactor posiciones + fix bug puentes

--- a/src/client/game/CMakeLists.txt
+++ b/src/client/game/CMakeLists.txt
@@ -4,14 +4,15 @@ target_sources(taller_client
         game.cpp
         sdl_app.cpp
         assets.cpp
-        map.cpp
         car.cpp
         screen.cpp
         sound.cpp
+        bounding_box.cpp
         PUBLIC
         # .h files
         sdl_app.h
         classes.h    # TODO(franco): TEMPORAL, SEPARAR.
         assets.h
-        map.h
+        bounding_box.h
+        car.h
 )
