--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,13 @@ endif ()
 
 set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
 
+# Eliminar warnings de deprecación de cmake de las dependencias
+set(OLD_CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1)
+add_subdirectory(_deps/sdl2-src EXCLUDE_FROM_ALL)
+add_subdirectory(_deps/yaml-src EXCLUDE_FROM_ALL)
+add_subdirectory(_deps/googletest-src EXCLUDE_FROM_ALL)
+set(OLD_CMAKE_SUPPRESS_DEVELOPER_WARNINGS 0)
+
 set(CMAKE_CXX_EXTENSIONS ON)
 # Genera el compile_commands.json para los clang
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -51,4 +58,4 @@ include(cmake/Dependencies.cmake)
 
 include(cmake/Executables.cmake)
 
-include(cmake/Assets.cmake)
+include(cmake/StaticData.cmake)
