--- a/assets/vice_city_map.yaml
+++ b/assets/vice_city_map.yaml
@@ -1751,7 +1751,240 @@ map:
         - { x: 2417.16, y: 2071.3 }
         - { x: 2410.36, y: 2506.54 }
         - { x: 2273.38, y: 2503.63 }
-
+    - type: overpass
+      vertices:
+        - { x: 4314.46, y: 3795.01 }
+        - { x: 4316.05, y: 3825.19 }
+        - { x: 4495.55, y: 3823.6 }
+        - { x: 4495.55, y: 3791.83 }
+    - type: overpass
+      vertices:
+        - { x: 4087.3, y: 4309.7 }
+        - { x: 4093.65, y: 4176.26 }
+        - { x: 4068.24, y: 4174.67 }
+        - { x: 4060.3, y: 4312.87 }
+    - type: overpass
+      vertices:
+        - { x: 3121.47, y: 4312.87 }
+        - { x: 3123.06, y: 4177.85 }
+        - { x: 3102.41, y: 4177.85 }
+        - { x: 3097.64, y: 4312.87 }
+    - type: overpass
+      vertices:
+        - { x: 2382.8, y: 3963.39 }
+        - { x: 2390.75, y: 3931.62 }
+        - { x: 2276.37, y: 3934.8 }
+        - { x: 2273.19, y: 3964.98 }
+    - type: overpass
+      vertices:
+        - { x: 3318.45, y: 3799.78 }
+        - { x: 3229.49, y: 3799.78 }
+        - { x: 3227.9, y: 3764.83 }
+        - { x: 3316.86, y: 3750.53 }
+    - type: overpass
+      vertices:
+        - { x: 2395.51, y: 3386.76 }
+        - { x: 2390.75, y: 3356.57 }
+        - { x: 2271.6, y: 3361.34 }
+        - { x: 2274.78, y: 3391.52 }
+    - type: overpass
+      vertices:
+        - { x: 1229.53, y: 3729.88 }
+        - { x: 1199.34, y: 3725.11 }
+        - { x: 1202.52, y: 3644.1 }
+        - { x: 1231.11, y: 3642.51 }
+    - type: overpass
+      vertices:
+        - { x: 1518.64, y: 3172.3 }
+        - { x: 1497.99, y: 3172.3 }
+        - { x: 1496.4, y: 3049.99 }
+        - { x: 1523.4, y: 3051.58 }
+    - type: overpass
+      vertices:
+        - { x: 3000.74, y: 3170.72 }
+        - { x: 2976.91, y: 3170.72 }
+        - { x: 2975.33, y: 3049.99 }
+        - { x: 3003.92, y: 3053.16 }
+    - type: overpass
+      vertices:
+        - { x: 4320.81, y: 2973.74 }
+        - { x: 4319.23, y: 3005.51 }
+        - { x: 4500.32, y: 3007.1 }
+        - { x: 4495.55, y: 2975.33 }
+    - type: overpass
+      vertices:
+        - { x: 3741, y: 3532.9 }
+        - { x: 3524.96, y: 3529.72 }
+        - { x: 3529.72, y: 3474.13 }
+        - { x: 3733.06, y: 3463.01 }
+    - type: overpass
+      vertices:
+        - { x: 2203.3, y: 2416.16 }
+        - { x: 2198.53, y: 2241.42 }
+        - { x: 2179.47, y: 2243.01 }
+        - { x: 2171.53, y: 2414.57 }
+    - type: overpass
+      vertices:
+        - { x: 2277.96, y: 1952.31 }
+        - { x: 2276.37, y: 1926.89 }
+        - { x: 2390.75, y: 1925.3 }
+        - { x: 2392.33, y: 1952.31 }
+    - type: overpass
+      vertices:
+        - { x: 4298.58, y: 1609.19 }
+        - { x: 4379.59, y: 1610.77 }
+        - { x: 4379.59, y: 1585.36 }
+        - { x: 4301.75, y: 1583.77 }
+    - type: overpass
+      vertices:
+        - { x: 725.96, y: 1199.34 }
+        - { x: 803.799, y: 1204.11 }
+        - { x: 800.622, y: 1256.53 }
+        - { x: 725.96, y: 1251.77 }
+    - type: overpass
+      vertices:
+        - { x: 656.065, y: 1189.81 }
+        - { x: 657.653, y: 1134.21 }
+        - { x: 606.82, y: 1129.45 }
+        - { x: 602.055, y: 1197.76 }
+    - type: overpass
+      vertices:
+        - { x: 613.174, y: 1123.09 }
+        - { x: 656.065, y: 1126.27 }
+        - { x: 652.888, y: 1194.58 }
+        - { x: 606.82, y: 1194.58 }
+    - type: overpass
+      vertices:
+        - { x: 662.419, y: 1043.67 }
+        - { x: 662.419, y: 1019.84 }
+        - { x: 616.352, y: 1018.25 }
+        - { x: 613.174, y: 1043.67 }
+    - type: overpass
+      vertices:
+        - { x: 659.242, y: 961.064 }
+        - { x: 659.242, y: 924.527 }
+        - { x: 605.232, y: 929.293 }
+        - { x: 608.409, y: 959.475 }
+    - type: overpass
+      vertices:
+        - { x: 797.445, y: 883.225 }
+        - { x: 829.215, y: 891.168 }
+        - { x: 827.627, y: 800.622 }
+        - { x: 805.387, y: 800.622 }
+    - type: overpass
+      vertices:
+        - { x: 1331.19, y: 624.294 }
+        - { x: 1183.46, y: 624.294 }
+        - { x: 1169.16, y: 565.518 }
+        - { x: 1331.19, y: 562.341 }
+    - type: overpass
+      vertices:
+        - { x: 2988.03, y: 611.586 }
+        - { x: 2983.27, y: 638.591 }
+        - { x: 3097.64, y: 640.18 }
+        - { x: 3096.05, y: 616.352 }
+    - type: overpass
+      vertices:
+        - { x: 3960.22, y: 282.759 }
+        - { x: 3985.63, y: 284.348 }
+        - { x: 3984.05, y: 198.567 }
+        - { x: 3955.45, y: 200.155 }
+    - type: overpass
+      vertices:
+        - { x: 2605.2, y: 838.746 }
+        - { x: 2746.58, y: 835.569 }
+        - { x: 2752.93, y: 913.408 }
+        - { x: 2613.14, y: 910.231 }
+    - type: overpass
+      vertices:
+        - { x: 511.739, y: 729.304 }
+        - { x: 560.001, y: 729.304 }
+        - { x: 561.534, y: 814.339 }
+        - { x: 507.142, y: 812.806 }
+    - type: overpass
+      vertices:
+        - { x: 350.097, y: 769.14 }
+        - { x: 347.032, y: 812.806 }
+        - { x: 400.658, y: 811.274 }
+        - { x: 401.424, y: 769.14 }
+    - type: overpass
+      vertices:
+        - { x: 1166.73, y: 564.598 }
+        - { x: 1166.73, y: 619.755 }
+        - { x: 1337.57, y: 625.118 }
+        - { x: 1333.74, y: 561.534 }
+    - type: overpass
+      vertices:
+        - { x: 2728, y: 341.67 }
+        - { x: 2729.53, y: 369.249 }
+        - { x: 2828.35, y: 374.611 }
+        - { x: 2819.16, y: 347.798 }
+    - type: overpass
+      vertices:
+        - { x: 4303.05, y: 857.239 }
+        - { x: 4385.02, y: 856.473 }
+        - { x: 4382.72, y: 884.818 }
+        - { x: 4299.22, y: 884.052 }
+    - type: overpass
+      vertices:
+        - { x: 2728.76, y: 1085.53 }
+        - { x: 2757.11, y: 1085.53 }
+        - { x: 2755.57, y: 1189.72 }
+        - { x: 2725.7, y: 1192.01 }
+    - type: overpass
+      vertices:
+        - { x: 1073.27, y: 1017.35 }
+        - { x: 1073.27, y: 1042.63 }
+        - { x: 1156.77, y: 1044.93 }
+        - { x: 1156.01, y: 1017.35 }
+    - type: overpass
+      vertices:
+        - { x: 1149.11, y: 1761.21 }
+        - { x: 1151.41, y: 1786.49 }
+        - { x: 1066.38, y: 1786.49 }
+        - { x: 1066.38, y: 1761.21 }
+    - type: overpass
+      vertices:
+        - { x: 1968.05, y: 1687.67 }
+        - { x: 2037, y: 1689.96 }
+        - { x: 2038.53, y: 1748.19 }
+        - { x: 1971.11, y: 1749.72 }
+    - type: overpass
+      vertices:
+        - { x: 2037.76, y: 1636.34 }
+        - { x: 2092.92, y: 1635.57 }
+        - { x: 2093.69, y: 1587.31 }
+        - { x: 2038.53, y: 1589.61 }
+    - type: overpass
+      vertices:
+        - { x: 1912.89, y: 1593.44 }
+        - { x: 1973.41, y: 1589.61 }
+        - { x: 1973.41, y: 1625.61 }
+        - { x: 1912.13, y: 1630.98 }
+    - type: overpass
+      vertices:
+        - { x: 363.12, y: 3644.99 }
+        - { x: 336.307, y: 3642.69 }
+        - { x: 337.073, y: 3726.19 }
+        - { x: 366.95, y: 3728.49 }
+    - type: overpass
+      vertices:
+        - { x: 455.049, y: 4567.34 }
+        - { x: 488.756, y: 4571.94 }
+        - { x: 487.224, y: 4478.48 }
+        - { x: 455.049, y: 4476.95 }
+    - type: overpass
+      vertices:
+        - { x: 2813.03, y: 3880.94 }
+        - { x: 2818.39, y: 3923.84 }
+        - { x: 2754.04, y: 3922.31 }
+        - { x: 2757.87, y: 3884 }
+    - type: overpass
+      vertices:
+        - { x: 2583.21, y: 3405.97 }
+        - { x: 2582.44, y: 3434.32 }
+        - { x: 2662.88, y: 3436.62 }
+        - { x: 2662.11, y: 3406.74 }
 
   sensors:
     upper:
