--- a/assets/san_andreas_map.yaml
+++ b/assets/san_andreas_map.yaml
@@ -2230,6 +2230,477 @@ map:
         - { x: 399.744, y: 4162.73 }
         - { x: 404.804, y: 4225.14 }
         - { x: 65.7806, y: 4224.58 }
+    - type: overpass
+      vertices:
+        - { x: 1137.39, y: 619.758 }
+        - { x: 1131.79, y: 644.94 }
+        - { x: 1271.69, y: 643.541 }
+        - { x: 1268.89, y: 618.359 }
+    - type: overpass
+      vertices:
+        - { x: 1284.28, y: 716.289 }
+        - { x: 1305.27, y: 721.885 }
+        - { x: 1305.27, y: 796.032 }
+        - { x: 1280.09, y: 791.835 }
+    - type: overpass
+      vertices:
+        - { x: 1489.94, y: 798.83 }
+        - { x: 1487.14, y: 710.693 }
+        - { x: 1505.33, y: 709.294 }
+        - { x: 1508.12, y: 798.83 }
+    - type: overpass
+      vertices:
+        - { x: 1466.15, y: 1193.35 }
+        - { x: 1464.75, y: 1169.57 }
+        - { x: 1406, y: 1169.57 }
+        - { x: 1407.4, y: 1198.94 }
+    - type: overpass
+      vertices:
+        - { x: 2224.41, y: 1071.64 }
+        - { x: 2241.2, y: 1071.64 }
+        - { x: 2239.8, y: 944.326 }
+        - { x: 2218.82, y: 941.528 }
+    - type: overpass
+      vertices:
+        - { x: 2294.36, y: 1067.44 }
+        - { x: 2308.35, y: 1068.84 }
+        - { x: 2309.75, y: 945.725 }
+        - { x: 2291.56, y: 945.725 }
+    - type: overpass
+      vertices:
+        - { x: 2119.49, y: 1159.77 }
+        - { x: 2119.49, y: 1183.56 }
+        - { x: 2189.44, y: 1183.56 }
+        - { x: 2189.44, y: 1163.97 }
+    - type: overpass
+      vertices:
+        - { x: 2390.89, y: 1124.8 }
+        - { x: 2389.49, y: 1141.59 }
+        - { x: 2476.23, y: 1144.38 }
+        - { x: 2473.43, y: 1126.2 }
+    - type: overpass
+      vertices:
+        - { x: 4494.99, y: 1340.24 }
+        - { x: 4506.18, y: 1358.43 }
+        - { x: 4353.69, y: 1364.03 }
+        - { x: 4356.49, y: 1347.24 }
+    - type: overpass
+      vertices:
+        - { x: 2921.12, y: 1533.31 }
+        - { x: 2930.91, y: 1436.77 }
+        - { x: 2907.13, y: 1429.78 }
+        - { x: 2908.52, y: 1524.91 }
+    - type: overpass
+      vertices:
+        - { x: 2691.68, y: 1319.26 }
+        - { x: 2690.28, y: 1337.45 }
+        - { x: 2614.73, y: 1338.84 }
+        - { x: 2614.73, y: 1313.66 }
+    - type: overpass
+      vertices:
+        - { x: 4356.49, y: 2283.17 }
+        - { x: 4353.69, y: 2270.58 }
+        - { x: 4163.43, y: 2273.38 }
+        - { x: 4164.83, y: 2290.17 }
+    - type: overpass
+      vertices:
+        - { x: 3875.23, y: 2231.41 }
+        - { x: 3878.03, y: 2111.09 }
+        - { x: 3862.64, y: 2109.69 }
+        - { x: 3864.04, y: 2232.81 }
+    - type: overpass
+      vertices:
+        - { x: 3701.76, y: 2235.6 }
+        - { x: 3701.76, y: 2113.89 }
+        - { x: 3683.57, y: 2115.29 }
+        - { x: 3689.17, y: 2231.41 }
+    - type: overpass
+      vertices:
+        - { x: 4100.47, y: 1842.49 }
+        - { x: 4075.29, y: 1845.28 }
+        - { x: 4075.29, y: 1685.8 }
+        - { x: 4099.07, y: 1680.2 }
+    - type: overpass
+      vertices:
+        - { x: 3768.91, y: 1650.82 }
+        - { x: 3774.51, y: 1846.68 }
+        - { x: 3745.13, y: 1841.09 }
+        - { x: 3740.93, y: 1652.22 }
+    - type: overpass
+      vertices:
+        - { x: 3158.95, y: 1859.27 }
+        - { x: 3174.33, y: 1860.67 }
+        - { x: 3174.33, y: 1635.43 }
+        - { x: 3157.55, y: 1628.44 }
+    - type: overpass
+      vertices:
+        - { x: 3024.64, y: 1849.48 }
+        - { x: 2993.86, y: 1850.88 }
+        - { x: 2992.46, y: 1662.01 }
+        - { x: 3016.25, y: 1666.21 }
+    - type: overpass
+      vertices:
+        - { x: 2355.92, y: 1849.48 }
+        - { x: 2333.53, y: 1848.08 }
+        - { x: 2332.14, y: 1660.61 }
+        - { x: 2351.72, y: 1663.41 }
+    - type: overpass
+      vertices:
+        - { x: 2221.61, y: 1433.98 }
+        - { x: 2225.81, y: 1520.71 }
+        - { x: 2242.6, y: 1522.11 }
+        - { x: 2238.4, y: 1433.98 }
+    - type: overpass
+      vertices:
+        - { x: 2057.93, y: 1422.78 }
+        - { x: 2057.93, y: 1519.32 }
+        - { x: 2069.12, y: 1519.32 }
+        - { x: 2067.72, y: 1418.59 }
+    - type: overpass
+      vertices:
+        - { x: 1904.04, y: 1331.85 }
+        - { x: 1902.64, y: 1348.64 }
+        - { x: 1989.38, y: 1354.23 }
+        - { x: 1997.77, y: 1331.85 }
+    - type: overpass
+      vertices:
+        - { x: 1759.94, y: 1203.14 }
+        - { x: 1758.54, y: 1292.68 }
+        - { x: 1772.53, y: 1291.28 }
+        - { x: 1772.53, y: 1198.94 }
+    - type: overpass
+      vertices:
+        - { x: 1627.04, y: 1315.06 }
+        - { x: 1629.84, y: 1333.25 }
+        - { x: 1689.99, y: 1333.25 }
+        - { x: 1688.59, y: 1319.26 }
+    - type: overpass
+      vertices:
+        - { x: 1499.73, y: 1429.78 }
+        - { x: 1499.73, y: 1531.91 }
+        - { x: 1520.71, y: 1534.7 }
+        - { x: 1517.92, y: 1431.18 }
+    - type: overpass
+      vertices:
+        - { x: 1529.11, y: 1429.78 }
+        - { x: 1526.31, y: 1527.71 }
+        - { x: 1541.7, y: 1530.51 }
+        - { x: 1544.5, y: 1429.78 }
+    - type: overpass
+      vertices:
+        - { x: 1491.34, y: 1664.81 }
+        - { x: 1480.14, y: 1863.47 }
+        - { x: 1496.93, y: 1862.07 }
+        - { x: 1508.12, y: 1663.41 }
+    - type: overpass
+      vertices:
+        - { x: 1243.71, y: 1677.4 }
+        - { x: 1236.72, y: 1839.69 }
+        - { x: 1267.5, y: 1848.08 }
+        - { x: 1263.3, y: 1674.6 }
+    - type: overpass
+      vertices:
+        - { x: 1261.9, y: 2055.13 }
+        - { x: 1263.3, y: 2126.48 }
+        - { x: 1319.26, y: 2123.68 }
+        - { x: 1313.66, y: 2050.94 }
+    - type: overpass
+      vertices:
+        - { x: 1566.88, y: 2123.68 }
+        - { x: 1559.89, y: 2060.73 }
+        - { x: 1604.65, y: 2063.53 }
+        - { x: 1606.05, y: 2119.49 }
+    - type: overpass
+      vertices:
+        - { x: 1597.66, y: 2428.67 }
+        - { x: 1606.05, y: 2430.07 }
+        - { x: 1607.45, y: 2322.34 }
+        - { x: 1592.06, y: 2320.94 }
+    - type: overpass
+      vertices:
+        - { x: 1467.55, y: 2428.67 }
+        - { x: 1489.94, y: 2432.86 }
+        - { x: 1491.34, y: 2315.35 }
+        - { x: 1467.55, y: 2313.95 }
+    - type: overpass
+      vertices:
+        - { x: 1056.25, y: 2428.67 }
+        - { x: 1071.64, y: 2432.86 }
+        - { x: 1074.43, y: 2316.75 }
+        - { x: 1053.45, y: 2315.35 }
+    - type: overpass
+      vertices:
+        - { x: 1344.44, y: 2963.09 }
+        - { x: 1364.03, y: 2971.48 }
+        - { x: 1362.63, y: 2853.96 }
+        - { x: 1340.24, y: 2856.76 }
+    - type: overpass
+      vertices:
+        - { x: 1254.9, y: 2963.09 }
+        - { x: 1271.69, y: 2970.08 }
+        - { x: 1271.69, y: 2851.17 }
+        - { x: 1256.3, y: 2855.36 }
+    - type: overpass
+      vertices:
+        - { x: 1786.52, y: 2855.36 }
+        - { x: 1810.31, y: 2853.96 }
+        - { x: 1817.3, y: 2974.28 }
+        - { x: 1800.52, y: 2968.68 }
+    - type: overpass
+      vertices:
+        - { x: 1891.45, y: 2781.22 }
+        - { x: 1884.46, y: 2807.8 }
+        - { x: 2013.16, y: 2800.8 }
+        - { x: 2010.37, y: 2781.22 }
+    - type: overpass
+      vertices:
+        - { x: 2101.3, y: 2856.76 }
+        - { x: 2118.09, y: 2856.76 }
+        - { x: 2120.89, y: 2961.69 }
+        - { x: 2099.9, y: 2963.09 }
+    - type: overpass
+      vertices:
+        - { x: 2592.35, y: 2064.93 }
+        - { x: 2585.35, y: 2083.11 }
+        - { x: 2737.85, y: 2081.71 }
+        - { x: 2732.25, y: 2057.93 }
+    - type: overpass
+      vertices:
+        - { x: 2726.65, y: 1908.24 }
+        - { x: 2728.05, y: 2062.13 }
+        - { x: 2740.64, y: 2064.93 }
+        - { x: 2743.44, y: 1911.04 }
+    - type: overpass
+      vertices:
+        - { x: 2979.87, y: 1929.22 }
+        - { x: 2979.87, y: 2029.95 }
+        - { x: 3000.86, y: 2035.55 }
+        - { x: 2999.46, y: 1934.82 }
+    - type: overpass
+      vertices:
+        - { x: 2599.34, y: 2246.8 }
+        - { x: 2595.15, y: 2276.18 }
+        - { x: 2707.07, y: 2271.98 }
+        - { x: 2714.06, y: 2253.79 }
+    - type: overpass
+      vertices:
+        - { x: 2881.94, y: 2312.55 }
+        - { x: 2884.74, y: 2439.86 }
+        - { x: 2901.53, y: 2438.46 }
+        - { x: 2907.13, y: 2301.36 }
+    - type: overpass
+      vertices:
+        - { x: 3132.36, y: 2306.95 }
+        - { x: 3139.36, y: 2432.86 }
+        - { x: 3150.55, y: 2432.86 }
+        - { x: 3156.15, y: 2304.16 }
+    - type: overpass
+      vertices:
+        - { x: 2691.68, y: 2526.6 }
+        - { x: 2690.28, y: 2603.54 }
+        - { x: 2711.27, y: 2604.94 }
+        - { x: 2709.87, y: 2522.4 }
+    - type: overpass
+      vertices:
+        - { x: 2390.89, y: 2102.7 }
+        - { x: 2395.09, y: 2183.84 }
+        - { x: 2410.48, y: 2183.84 }
+        - { x: 2413.28, y: 2090.11 }
+    - type: overpass
+      vertices:
+        - { x: 3087.6, y: 2855.36 }
+        - { x: 3087.6, y: 2971.48 }
+        - { x: 3108.58, y: 2970.08 }
+        - { x: 3102.99, y: 2852.56 }
+    - type: overpass
+      vertices:
+        - { x: 2523.8, y: 2855.36 }
+        - { x: 2526.6, y: 2961.69 }
+        - { x: 2546.18, y: 2967.28 }
+        - { x: 2543.38, y: 2852.56 }
+    - type: overpass
+      vertices:
+        - { x: 4362.09, y: 2260.79 }
+        - { x: 4366.28, y: 2290.17 }
+        - { x: 4173.22, y: 2292.96 }
+        - { x: 4170.42, y: 2273.38 }
+    - type: overpass
+      vertices:
+        - { x: 3595.43, y: 2388.1 }
+        - { x: 3592.64, y: 2309.75 }
+        - { x: 3577.25, y: 2309.75 }
+        - { x: 3575.85, y: 2386.7 }
+    - type: overpass
+      vertices:
+        - { x: 3559.06, y: 2528 }
+        - { x: 3556.26, y: 2600.74 }
+        - { x: 3571.65, y: 2602.14 }
+        - { x: 3580.04, y: 2508.41 }
+    - type: overpass
+      vertices:
+        - { x: 4057.1, y: 2637.12 }
+        - { x: 4054.31, y: 2653.91 }
+        - { x: 4170.42, y: 2648.31 }
+        - { x: 4376.08, y: 2651.11 }
+        - { x: 4373.28, y: 2625.93 }
+        - { x: 4066.9, y: 2630.12 }
+    - type: overpass
+      vertices:
+        - { x: 3427.55, y: 4415.25 }
+        - { x: 3405.17, y: 4420.84 }
+        - { x: 3403.77, y: 4265.56 }
+        - { x: 3434.55, y: 4257.16 }
+    - type: overpass
+      vertices:
+        - { x: 331.563, y: 3571.65 }
+        - { x: 334.361, y: 3549.27 }
+        - { x: 172.077, y: 3546.47 }
+        - { x: 167.88, y: 3573.05 }
+    - type: overpass
+      vertices:
+        - { x: 2452.45, y: 3151.95 }
+        - { x: 2491.62, y: 3146.35 }
+        - { x: 2483.23, y: 3179.93 }
+        - { x: 2453.85, y: 3184.13 }
+    - type: overpass
+      vertices:
+        - { x: 1971.19, y: 3272.26 }
+        - { x: 1964.2, y: 3290.45 }
+        - { x: 2021.56, y: 3289.05 }
+        - { x: 2022.96, y: 3276.46 }
+    - type: overpass
+      vertices:
+        - { x: 2172.65, y: 3234.49 }
+        - { x: 2190.84, y: 3224.7 }
+        - { x: 2188.04, y: 3298.85 }
+        - { x: 2174.05, y: 3297.45 }
+    - type: overpass
+      vertices:
+        - { x: 2104.1, y: 3409.37 }
+        - { x: 2104.1, y: 3452.74 }
+        - { x: 2169.85, y: 3458.33 }
+        - { x: 2168.45, y: 3441.54 }
+        - { x: 2120.89, y: 3407.97 }
+    - type: overpass
+      vertices:
+        - { x: 1933.42, y: 3426.15 }
+        - { x: 1950.21, y: 3423.36 }
+        - { x: 1944.61, y: 3490.51 }
+        - { x: 1932.02, y: 3489.11 }
+    - type: overpass
+      vertices:
+        - { x: 1978.19, y: 3121.17 }
+        - { x: 1976.79, y: 3105.78 }
+        - { x: 1818.7, y: 3102.99 }
+        - { x: 1821.5, y: 3122.57 }
+    - type: overpass
+      vertices:
+        - { x: 1838.29, y: 3188.32 }
+        - { x: 1842.49, y: 3101.59 }
+        - { x: 1824.3, y: 3102.99 }
+        - { x: 1827.1, y: 3179.93 }
+    - type: overpass
+      vertices:
+        - { x: 1785.13, y: 3165.94 }
+        - { x: 1838.29, y: 3170.14 }
+        - { x: 1836.89, y: 3181.33 }
+        - { x: 1779.53, y: 3186.93 }
+    - type: overpass
+      vertices:
+        - { x: 3724.14, y: 3623.41 }
+        - { x: 3710.15, y: 3683.57 }
+        - { x: 3801.09, y: 3680.77 }
+        - { x: 3820.67, y: 3620.62 }
+    - type: overpass
+      vertices:
+        - { x: 3437.35, y: 3873.84 }
+        - { x: 3427.55, y: 3914.41 }
+        - { x: 3483.51, y: 3910.21 }
+        - { x: 3482.11, y: 3879.43 }
+    - type: overpass
+      vertices:
+        - { x: 3677.98, y: 4066.9 }
+        - { x: 3683.57, y: 4093.48 }
+        - { x: 3726.94, y: 4087.88 }
+        - { x: 3722.74, y: 4073.89 }
+    - type: overpass
+      vertices:
+        - { x: 3794.09, y: 4062.7 }
+        - { x: 3789.9, y: 4093.48 }
+        - { x: 3836.06, y: 4085.08 }
+        - { x: 3833.26, y: 4062.7 }
+    - type: overpass
+      vertices:
+        - { x: 1638.78, y: 2151.53 }
+        - { x: 1637.43, y: 2167.05 }
+        - { x: 1725.14, y: 2166.37 }
+        - { x: 1725.81, y: 2151.53 }
+    - type: overpass
+      vertices:
+        - { x: 1897.85, y: 2032.11 }
+        - { x: 1893.81, y: 2046.96 }
+        - { x: 2008.5, y: 2047.63 }
+        - { x: 2007.15, y: 2033.46 }
+    - type: overpass
+      vertices:
+        - { x: 1231.28, y: 2046.28 }
+        - { x: 1228.58, y: 2061.8 }
+        - { x: 1116.58, y: 2062.47 }
+        - { x: 1117.93, y: 2047.63 }
+    - type: overpass
+      vertices:
+        - { x: 1340.57, y: 2127.92 }
+        - { x: 1341.25, y: 2142.09 }
+        - { x: 1391.85, y: 2142.76 }
+        - { x: 1391.18, y: 2127.24 }
+    - type: overpass
+      vertices:
+        - { x: 1476.18, y: 2128.59 }
+        - { x: 1477.53, y: 2143.44 }
+        - { x: 1529.48, y: 2142.76 }
+        - { x: 1527.46, y: 2125.22 }
+    - type: overpass
+      vertices:
+        - { x: 411.281, y: 670.355 }
+        - { x: 410.471, y: 654.972 }
+        - { x: 460.667, y: 655.782 }
+        - { x: 465.524, y: 671.165 }
+    - type: overpass
+      vertices:
+        - { x: 781.271, y: 678.451 }
+        - { x: 782.081, y: 691.405 }
+        - { x: 835.515, y: 691.405 }
+        - { x: 832.276, y: 678.451 }
+    - type: overpass
+      vertices:
+        - { x: 4173.53, y: 1909.86 }
+        - { x: 4172.72, y: 1896.1 }
+        - { x: 4359.74, y: 1895.29 }
+        - { x: 4356.5, y: 1908.24 }
+    - type: overpass
+      vertices:
+        - { x: 4415.6, y: 1895.29 }
+        - { x: 4415.6, y: 1912.29 }
+        - { x: 4489.27, y: 1911.48 }
+        - { x: 4488.46, y: 1897.72 }
+    - type: overpass
+      vertices:
+        - { x: 3856.97, y: 2527.59 }
+        - { x: 3856.97, y: 2607.75 }
+        - { x: 3871.54, y: 2608.55 }
+        - { x: 3871.54, y: 2533.26 }
+    - type: overpass
+      vertices:
+        - { x: 4016.46, y: 2528.4 }
+        - { x: 4015.65, y: 2609.36 }
+        - { x: 4027.8, y: 2609.36 }
+        - { x: 4031.04, y: 2527.59 }
+    - type: overpass
+      vertices:
+        - { x: 3729.86, y: 2482.26 }
+        - { x: 3727.43, y: 2491.16 }
+        - { x: 3825.39, y: 2496.02 }
+        - { x: 3824.59, y: 2481.45 }
   sensors:
     upper:
       - vertices:
