refactor(mapLoader): solo trabaja con common/structs.h
- Para las conversiones yaml -> servidor, solamente se encarga el mapLoader con una clase auxiliar Convertor

- Para las conversiones servidor -> cliente, se encarga el controlador con la misma clase auxiliar Convertor

- El mapLoader solamente carga lo que dice el yaml
- Cada clase, convierte estas estructuras en las que necesita.
Para que las estructuras que usa sean constantes, MatchSession y RaceSession tienen Builders cada uno.

--- a/src/server/session/logic/match/CMakeLists.txt
+++ b/src/server/session/logic/match/CMakeLists.txt
@@ -4,6 +4,8 @@ target_sources(taller_server
         MatchSessionIntermission.cpp
         MatchSessionRaceInit.cpp
         MatchSessionSnapshots.cpp
+        MatchSessionBuilder.cpp
         PUBLIC
         MatchSession.h
+        MatchSessionBuilder.h
 )
