--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,2 +1,2 @@
 set noparent
-filter=-legal/copyright, -readability/alt_tokens, -whitespace/indent, -runtime/references, -build/c++11, -build/include_order, -build/namespaces
+filter=-legal/copyright, -readability/alt_tokens, -whitespace/indent, -whitespace/braces, -runtime/references, -build/c++11, -build/include_order, -build/namespaces
